# refills_mock_gui

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: refills_mock_gui.ui
designs/: refills_mock_gui.ui
launch/: mock_gui.launch
resources/: test_loc_ids.yaml
scripts/: mock_gui.py  mock_robot.py
src/refills_mock_gui/: layout.py
